Closed Bug 42972 Opened 25 years ago Closed 25 years ago

[FIX]checkbox/radio value attribute updated AFTER onclick fired

Categories

(Core :: Layout: Form Controls, defect, P3)

x86
Windows NT
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: Chris244, Assigned: rods)

References

Details

(Whiteboard: [nsbeta3+]fix in my tree)

Attachments

(1 file)

The value of a checkbox should be updated before the onclick event. The test case works in NS 4.x but fails in mozilla.
Attached file test case
The ESM dispatches the event to JS before the DOM event handlers get called to change the value in the NS_MOUSE_LEFT_CLICK switch in HandleDOMEvent method. So if I have the nsHTMLInputElement set the value in NS_MOUSE_LEFT_BUTTON_UP switch of HandleDOMEvent then it will be set correctly when the CLICK comes through.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Keywords: 4xp, nsbeta3
Whiteboard: fix in my tree
Severity: normal → major
Target Milestone: --- → M16
Summary: checkbox value attribute updated AFTER onclick fired → [FIX]checkbox value attribute updated AFTER onclick fired
M16 has been out for a while now, these bugs target milestones need to be updated.
For the most part milestones are pretty meaningless at this point. nsbeta2 and nsbeta3 are pretty meaningful. Getting the bug counts down to zero (excluding future bugs) is the important part.
setting to M17
Target Milestone: M16 → M17
*** Bug 43993 has been marked as a duplicate of this bug. ***
Summary: [FIX]checkbox value attribute updated AFTER onclick fired → [FIX]checkbox/radio value attribute updated AFTER onclick fired
*** Bug 45284 has been marked as a duplicate of this bug. ***
This should be plussed - this hit us in AIM with the sign-on panel, and I just happened to try to use oncommand instead of onclick in radio buttons. Developers outside netscape are going to hit this bug hard if they dont know about oncommand. PDT, could you please consider this one? So, this not only effects checkboxes but radio buttons as well.
Marking nsbeta3+
Whiteboard: fix in my tree → [nsbeta3+]fix in my tree
fixed
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
*** Bug 48000 has been marked as a duplicate of this bug. ***
This is behaving the same in Communicator 4.x, IE5, and NS6 Marking VERIFIED FIXED on: - LinuxRH62 2000-09-07-08-M18 Commercial - Win98 2000-09-07-08-M18 Mozilla - MacOS86 2000-09-07-04-M18 Commercial
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: