The script notification happens before the radiobox gets a chance to change its value so they must return the opposite value for themselves. They don't want to actually set their values because the script could cancel. So the idea here is to let them know before the script call that they should return their "future" value (the opposite of their current value)

plus I made a minor change that allows the radio button to use the PaintBackground code to draw the "dot"
but it creates a tmp color struct so the color is correct.
b=42972,37517 r=kmcclusk